Closed Bug 1355921 Opened 9 years ago Closed 9 years ago

Elements with a defined, non-false value for aria-current should expose ATK_STATE_ACTIVE

Categories

(Core :: Disability Access APIs, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: jdiggs, Assigned: jdiggs)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

Steps to reproduce: 1. Load data:text/html,<div role="link" aria-current="page">1</div> 2. Use Accerciser to examine the element Expected results: the element would be exposed with STATE_ACTIVE Actual results: the element is not exposed with STATE_ACTIVE https://rawgit.com/w3c/aria/master/core-aam/core-aam.html#ariaCurrent
Hopefully it goes without saying, but just in case: In addition to exposing STATE_ACTIVE, when the value of aria-current changes from non-false to false or from false to non-false, an object:state-changed:active event should also be fired.
Attached patch proposed patch (obsolete) — Splinter Review
Assignee: nobody → jdiggs
Status: NEW → ASSIGNED
Attachment #8883124 - Flags: review?(mzehe)
Attached patch proposed patchSplinter Review
(This version fixes a nit in the previous version's alphabetizing of states. Sorry for the noise!)
Attachment #8883124 - Attachment is obsolete: true
Attachment #8883124 - Flags: review?(mzehe)
Attachment #8883136 - Flags: review?(mzehe)
Comment on attachment 8883136 [details] [diff] [review] proposed patch r=me.
Attachment #8883136 - Flags: review?(mzehe) → review+
Keywords: checkin-needed
Pushed by cbook@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4bc42c671bd2 Elements with a defined, non-false value for aria-current should expose ATK_STATE_ACTIVE. r=marcoz
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: