Bug 1355921 - Elements with a defined, non-false value for aria-current should expose ATK_STATE_ACTIVE. r=marcoz Create states::CURRENT and add it to the list of "universal" (global) ARIA states. Map states::CURRENT to ATK_STATE_ACTIVE and emit accessible state-change notifications when the value of aria-current is modified.